--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="/Users/qz/Desktop/qz-hp/jars/lib/logger/slf4j-api-1.7.7.jar"/>
 	<classpathentry kind="lib" path="/Users/qz/Desktop/qz-hp/jars/lib/SwingX/swingx-all-1.6.4.jar"/>
 	<classpathentry kind="lib" path="/Users/qz/Desktop/qz-hp/jars/lib/miglayout/miglayout-4.0.jar"/>
+	<classpathentry kind="lib" path="/Users/qz/Downloads/javaml-0.1.7/javaml-0.1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/qz/Downloads/libsvm-3.21/java/libsvm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
